--- a/interface/src/python/Makefile.am
+++ b/interface/src/python/Makefile.am
@@ -29,7 +29,7 @@ EXTRA_DIST = getfem_python.c
 
 # $(warning PSEUDO_FUNCTIONS= $(PSEUDO_FUNCTIONS))
 
-CLEANFILES = getfem.py _getfem*.so *.o getfem_python_c.o getfem_python_c.c getfem.pyc
+CLEANFILES = getfem.py _getfem*.so *.o getfem_python_c.o getfem_python_c.c getfem.pyc __pycache__/*
 
 if BUILDPYTHONPAR
 
