--- a/configure.ac
+++ b/configure.ac
@@ -1132,7 +1132,7 @@ BUILDDATE=`date +%D,%H:%M:%S`
 AC_SUBST(BUILDDATE)
 CONFIGURE_ARGS=$ac_configure_args
 AC_SUBST(CONFIGURE_ARGS)
-LIBTOOL_VERSION_INFO="-version-info ${MAJOR_VERSION}:${MINOR_VERSION}:0"
+LIBTOOL_VERSION_INFO="-version-info ${MAJOR_VERSION}:${MINOR_VERSION}:${PATCH_VERSION}"
 AC_SUBST(LIBTOOL_VERSION_INFO)
 
 dnl AC_CHECK_PROGS(RANLIB, ranlib)
