--- a/doc/sphinx/Makefile.am
+++ b/doc/sphinx/Makefile.am
@@ -161,7 +161,7 @@ upload:
 	-rm -fr homepage *.tar.gz
 	-mv build/html homepage
 	-(export srcdir=$(srcdir) && $(top_srcdir)/bin/upload_html --delete homepage)
-	-test ! -d "getfem_site" && git clone "git\@plmlab.math.cnrs.fr:renard/getfem_site.git"
+	-test ! -d "getfem_site" && git clone "git@plmlab.math.cnrs.fr:renard/getfem_site.git"
 	-(cd homepage && rsync --delete  -rlptDv . ../getfem_site/public)
 	-(cd getfem_site && git add . && git commit -m "update" && git push origin master)
 	-rm -fr getfem-$(DISTVERSION)-docs-html
